styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}

:root {
  --gray: #e0dee2;
  --lightred: #dd7a6f;
  --lightbrown: #a88b73;
  --brownpurple: #6d5459;
  --teal: #39a6a8;
}

body {
  font-family: "Nunito Sans", sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 20px auto 0px;
  color: #222;
  text-align: center;
  font-size: 20px;
  min-height: 100vh;
  /* border: 1px solid black; */
  position: relative;
}

.container {
  display: flex;
  flex-direction: column;
  /* background: lightgoldenrodyellow; */
  width: 100%;
  max-width: 80%;
  /* max-width: 1600px; */
  height: fit-content;
  border: 1px solid black;
}

/* Navbar */
#navbar {
  display: flex;
  justify-content: center;
  width: 100%;
  padding: 1rem 0rem 0.5rem;
  border-bottom: 1px solid #c5c5c5;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
  flex-direction: row;
  font-family: "Fraunces", sans-serif;

  width: 80%;
  max-width: 1600px;
}

.nav-logo {
  border: 3px solid #222;
  padding: 10px;
  border-radius: 50%;
  transition: all 0.4s ease-in-out;
}
.nav-logo img {
  height: 40px;
  width: 40px;
}

.nav-logo:hover {
  transform: scale(1.05);
}

nav ul {
  display: flex;
  flex-direction: row;
  list-style: none;
  gap: 80px;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

nav li a {
  color: #222;
  text-decoration: none;
  transition: color 0.3s ease;
}

nav li a:hover {
  color: var(--lightred);
}

.nav-buttons {
  display: flex;
  gap: 0.6rem;
}

.btn {
  padding: 0.8rem 1.4rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 1.2rem;
  transition: background-color 0.3s ease;
  font-weight: bold;
  font-family: Arial, sans-serif;
}

.btn-primary {
  background-color: var(--teal);
  color: #fff;
  margin-left: 10px;
}

.btn-primary:hover {
  background-color: var(--lightred);
}

.btn-secondary {
  background-color: transparent;
  transition: all 0.3s ease;
  border-radius: 0px;
  border-right: 1px solid #c5c5c5;
}

.btn-secondary:hover {
  color: var(--lightred);
}

/* Mobile Navbar */
#mobile-navbar {
  display: none;
}

/* Media Queries */
@media (max-width: 1200px) {
  nav {
    width: 95%;
  }

  .nav-links {
    gap: 40px;
  }
}

@media (max-width: 992px) {
  #navbar {
    display: none !important;
  }

  /* Mobile Navbar */
  #mobile-navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 2rem;
    flex-direction: column;
    font-family: "Nunito Sans", sans-serif;
    width: 100%;
    height: 100px;
    max-width: 1000px;
    padding-bottom: 25px;
    border-bottom: 1px solid #c5c5c5;
    position: relative;
  }

  .mobile-navbar-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1000px;
  }

  .nav-logo {
    position: absolute;
    text-align: center;
    left: 50%;
  }

  .nav-logo img {
    width: 40px;
    height: 40px;
  }
  .mobile-menu-btn img {
    padding-top: 10px;
  }

  .menu-icon {
    width: 50px;
    height: 50px;
  }
}

@media (max-width: 768px) {
  .nav-links {
    flex-direction: column;
    align-items: center;
    gap: 20px;
  }

  .nav-buttons {
    flex-direction: column;
    align-items: center;
  }
}

/* Mobile Menu Overlay */
#overlay {
  display: none;
}

#overlay.active {
  display: block;
  opacity: 1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(17, 21, 24, 0.45);
  z-index: 1999 !important;
  transition: opacity 0.3s cubic-bezier(0.6, 0.4, 0, 1);
}

/* Sign Up form */
#modal-signin {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100vw;
  height: 100% !important;
  background-color: rgba(65, 66, 66, 0.45);
  z-index: 2002 !important;
  opacity: 0; /* start with 0 opacity */
  transition: opacity 0.3s, visibility 0.3s ease;
  visibility: hidden;
}

#modal-signin.show {
  visibility: visible; /* fades in */
  opacity: 1; /* show when active */
}

#modal-signin .overlay-content {
  z-index: 2003 !important;
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 400px;
  height: fit-content;
  background-color: #ffffff;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 10px 10px;
  border-radius: 15px;
  width: 100%;
}

#modal-signin .overlay-content .close-icon {
  position: absolute;
  top: 10px;
  left: 15px;
  background: none;
  font-size: 30px;
  color: #3b3b3b;
  border: none;
  cursor: pointer;
  padding: 2px 8px;
  transition: background-color all 0.4s ease;
}

#modal-signin .overlay-content .close-icon:hover {
  background-color: #f7f7f7;
  border-radius: 8px;
}

.overlay-content .upper-section {
  padding: 32px 24px 24px;
}

#modal-signin .overlay-content h2 {
  font-family: "Inter", sans-serif;
  line-height: 1.1rem;
  font-size: 30px;
  font-variation-settings: "wght" 900;
  letter-spacing: -0.045em;
  padding-bottom: 25px !important;
}

#modal-signin .overlay-content .overlay-text {
  font-family: "Inter", sans-serif;
  font-size: 16px;
  color: #7d7c83;
  line-height: 1.4em;
  font-variation-settings: "wght" 400;
  margin-bottom: 5px;
}

#modal-signin .overlay-content .lower-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 7px;
  padding: 5px 24px 24px;
}

#modal-signin .overlay-content .lower-section .auth-button {
  font-family: "Inter", sans-serif;
  font-size: 16px;
  width: 100%;
  border: none;
  border-radius: 8px;
  font-style: normal;
  background-color: #f2f2f3;
  color: #000000;
  font-weight: bold;
  font-variation-settings: "wght" 600;
  text-align: center;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 13px 20px;
  margin-bottom: 7px;
  position: relative;
}
/* ... */

